# skills-registry

./: .gitignore  README.md  install.sh  package.json  test.js  test.sh
.github/workflows/: publish.yml
agents/pr-code/: agent.md
agents/pr-design/: agent.md
agents/pr-fix/: agent.md
agents/pr-fixer/: agent.md
agents/pr-orchestrator/: agent.md
agents/pr-review-coordinator/: agent.md
agents/pr-reviewer/: agent.md
agents/review-pr/: agent.md
behaviors/: evidence-based-claims.md  independent-output-verification.md  no-blind-trust.md  safe-revert-on-failure.md  structured-pushback.md  verification-gate.md
criteria/: figma-design-match.md  has-migration-safety.md  has-regression-test.md  has-test-coverage.md  no-accessibility-regression.md  no-behavior-change.md  no-breaking-api-change.md
docs/: agentic-design-principles.md
lib/: discovery.js  frontmatter.js  installer.js  parse_frontmatter.py  profiles.js  test-frontmatter.js  test-profiles.js  test_parse_frontmatter.py
poc/: DESIGN_PRINCIPLES.md  package.json  pyproject.toml  review-fix-poc.mjs
poc/agents/: fixer.md  reviewer.md
poc/engine/: __main__.py  agents.py  cli.py  config.py  convergence.py  gates.py  grounding.py  orchestrator.py  progress.py  schema.py  state.py
poc/tests/: test_convergence.py  test_grounding.py
profiles/: backend.md  frontend.md
ref/: mcp-tools.md
review-fix-engine/agents/: extractor_dom.md  extractor_figma.md  fixer.md  reviewer_base.md  reviewer_edge_case.md  reviewer_logic.md  reviewer_security.md
scripts/: design-diff.js  dom-extract.js  figma-extract.js
(+47 files in other folders)
