[project]
name = "review-fix-engine"
version = "0.1.0"
description = "SDK-based PR review-fix loop engine"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
review-fix = "engine.cli:main"
